--- a/app/views/surveys/_form.html.erb
+++ b/app/views/surveys/_form.html.erb
@@ -23,7 +23,7 @@
     </tbody>
   </table>
 
-  <div class="actions">
+  <div class="actions text-center">
     <%= f.button :submit %>
     <%= link_to_add_association 'Add Question', f, :questions, class: 'btn btn-success', data: { association_insertion_node: '.questions', association_insertion_method: :append } %>
   </div>
