--- a/app/views/surveys/new.html.erb
+++ b/app/views/surveys/new.html.erb
@@ -1,6 +1,21 @@
-  
-<h1>New Survey</h1>
-
-<%= render 'form', survey: @survey %>
-
-<%= link_to 'Back', surveys_path %>
+<section class="py-5 bg-secondary" style="min-height: 84%">
+  <div class="container pt-lg-md">
+    <div class="row justify-content-center">
+      <div class="col-lg-8">
+        <div class="card bg-secondary shadow border-0">
+          <div class="card-header px-lg-5 py-lg-5">
+            <h1 class="text-center">New Survey</h1>
+            <div class="col-3 text-right text-center">  
+              <%= render 'form', survey: @survey %>
+            </div>
+            <br>
+            <div class="col-3 text-right">
+              <%= link_to 'Back', surveys_path, class: "btn btn-danger" %>
+            </div>
+            <br> 
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
