--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -20,8 +20,21 @@
                     </div>
                   </div>
                   <br>
+                    <% if q.answered == false %>
+                      <%= link_to 'answer question', new_answer_path(q)  %>
+                    <% else %>
+                      <div style='color: green;'>Answered!</div>
+                    <% end %>
                   <% end %>
                 </form>
+                <strong>Average Rating</strong><br>
+                  <% average = [] %>
+                  <% @survey.answers.each do |a| %>
+                    <% average << a.value %>
+                  <% end %>
+                  <% result = average.sum / average.size.to_f %>
+                  <%= result %> /4 <br>
+                  <br>
                 <div class="row justify-content-around mt-3">
 		              <div class="col-3">
 		                <%= link_to 'Edit', edit_survey_path(@survey), class: "btn btn-info" %>
