--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
 		<nav class="navbar navbar-expand-lg navbar-dark bg-default">
 			
 			<div id="narvbar_left">
-				<a class="navbar-brand" href="/">Satisfact°</a>
+				<a style class="navbar-brand" href="/">Satisfact°</a>
 				<%= link_to "Our services", static_index_our_services_path, class: "nav-link" %>
 				<%= link_to "About Us", static_index_about_us_path, class: "nav-link" %>
 				<%= link_to "Contact Us", new_contact_path, class: "nav-link" %>
