--- a/app/views/surveys/index.html.erb
+++ b/app/views/surveys/index.html.erb
@@ -50,6 +50,7 @@
     <div class="row justify-content-md-center">
       <div class="col col-2">
         <%= link_to 'New Survey', new_survey_path, class: "btn btn-success" %>
+        <%= link_to 'Dashboard', dashboard_path(@dashboard), class: "btn btn-info" %>
       </div>
     </div>
   </div>
